japan_post/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> choiki
Rule 1     choiki -> node_list
Rule 2     node -> node L_PAREN node_list R_PAREN
Rule 3     node -> node L_PAREN node_list EXCLUDE R_PAREN
Rule 4     node -> node L_PAREN node_list R_PAREN EXCLUDE
Rule 5     node_list -> node COMMA node_list
Rule 6     node_list -> node
Rule 7     node -> node WAVE_DASH
Rule 8     node_list -> bullet_list COMMA node_list
Rule 9     node_list -> bullet_list
Rule 10    node -> node bullet_list
Rule 11    node -> node L_PAREN bullet_list R_PAREN
Rule 12    bullet_list -> node BULLET bullet_list
Rule 13    bullet_list -> node
Rule 14    num_node -> num_node THEN num_node
Rule 15    range_node -> node WAVE_DASH node
Rule 16    node -> node node
Rule 17    num_node -> num_node HYPHEN num_node
Rule 18    string_node -> string_node HYPHEN num_node
Rule 19    node -> range_node
Rule 20    node -> num_node
Rule 21    node -> string_node
Rule 22    node -> suffix_node
Rule 23    num_node -> PREFIX NUMBER
Rule 24    num_node -> PREFIX NUMBER SUFFIX
Rule 25    num_node -> PREFIX NUMBER SUFFIX COMPARATIVE_SUFFIX
Rule 26    num_node -> NUMBER SUFFIX
Rule 27    num_node -> NUMBER SUFFIX COMPARATIVE_SUFFIX
Rule 28    num_node -> NUMBER
Rule 29    num_node -> NUMBER COMPARATIVE_SUFFIX
Rule 30    num_node -> PREFIX NUMBER COMPARATIVE_SUFFIX
Rule 31    string_node -> ID NUMBER
Rule 32    string_node -> ID NUMBER SUFFIX
Rule 33    string_node -> ID
Rule 34    string_node -> string_node DOT ID
Rule 35    string_node -> FLOOR BULLET FLOOR
Rule 36    suffix_node -> L_PAREN SUFFIX R_PAREN

Terminals, with rules where they appear

BULLET               : 12 35
COMMA                : 5 8
COMPARATIVE_SUFFIX   : 25 27 29 30
DOT                  : 34
EXCLUDE              : 3 4
FLOOR                : 35 35
HYPHEN               : 17 18
ID                   : 31 32 33 34
L_PAREN              : 2 3 4 11 36
NUMBER               : 23 24 25 26 27 28 29 30 31 32
PREFIX               : 23 24 25 30
R_PAREN              : 2 3 4 11 36
SUFFIX               : 24 25 26 27 32 36
THEN                 : 14
WAVE_DASH            : 7 15
error                : 

Nonterminals, with rules where they appear

bullet_list          : 8 9 10 11 12
choiki               : 0
node                 : 2 3 4 5 6 7 10 11 12 13 15 15 16 16
node_list            : 1 2 3 4 5 8
num_node             : 14 14 17 17 18 20
range_node           : 19
string_node          : 18 21 34
suffix_node          : 22

Parsing method: LALR

state 0

    (0) S' -> . choiki
    (1) choiki -> . node_list
    (5) node_list -> . node COMMA node_list
    (6) node_list -> . node
    (8) node_list -> . bullet_list COMMA node_list
    (9) node_list -> . bullet_list
    (2) node -> . node L_PAREN node_list R_PAREN
    (3) node -> . node L_PAREN node_list EXCLUDE R_PAREN
    (4) node -> . node L_PAREN node_list R_PAREN EXCLUDE
    (7) node -> . node WAVE_DASH
    (10) node -> . node bullet_list
    (11) node -> . node L_PAREN bullet_list R_PAREN
    (16) node -> . node node
    (19) node -> . range_node
    (20) node -> . num_node
    (21) node -> . string_node
    (22) node -> . suffix_node
    (12) bullet_list -> . node BULLET bullet_list
    (13) bullet_list -> . node
    (15) range_node -> . node WAVE_DASH node
    (14) num_node -> . num_node THEN num_node
    (17) num_node -> . num_node HYPHEN num_node
    (23) num_node -> . PREFIX NUMBER
    (24) num_node -> . PREFIX NUMBER SUFFIX
    (25) num_node -> . PREFIX NUMBER SUFFIX COMPARATIVE_SUFFIX
    (26) num_node -> . NUMBER SUFFIX
    (27) num_node -> . NUMBER SUFFIX COMPARATIVE_SUFFIX
    (28) num_node -> . NUMBER
    (29) num_node -> . NUMBER COMPARATIVE_SUFFIX
    (30) num_node -> . PREFIX NUMBER COMPARATIVE_SUFFIX
    (18) string_node -> . string_node HYPHEN num_node
    (31) string_node -> . ID NUMBER
    (32) string_node -> . ID NUMBER SUFFIX
    (33) string_node -> . ID
    (34) string_node -> . string_node DOT ID
    (35) string_node -> . FLOOR BULLET FLOOR
    (36) suffix_node -> . L_PAREN SUFFIX R_PAREN

    PREFIX          shift and go to state 10
    NUMBER          shift and go to state 11
    ID              shift and go to state 12
    FLOOR           shift and go to state 13
    L_PAREN         shift and go to state 5

    choiki                         shift and go to state 1
    node_list                      shift and go to state 2
    node                           shift and go to state 3
    bullet_list                    shift and go to state 4
    range_node                     shift and go to state 6
    num_node                       shift and go to state 7
    string_node                    shift and go to state 8
    suffix_node                    shift and go to state 9

state 1

    (0) S' -> choiki .



state 2

    (1) choiki -> node_list .

    $end            reduce using rule 1 (choiki -> node_list .)


state 3

    (5) node_list -> node . COMMA node_list
    (6) node_list -> node .
    (2) node -> node . L_PAREN node_list R_PAREN
    (3) node -> node . L_PAREN node_list EXCLUDE R_PAREN
    (4) node -> node . L_PAREN node_list R_PAREN EXCLUDE
    (7) node -> node . WAVE_DASH
    (10) node -> node . bullet_list
    (11) node -> node . L_PAREN bullet_list R_PAREN
    (16) node -> node . node
    (12) bullet_list -> node . BULLET bullet_list
    (13) bullet_list -> node .
    (15) range_node -> node . WAVE_DASH node
    (12) bullet_list -> . node BULLET bullet_list
    (13) bullet_list -> . node
    (2) node -> . node L_PAREN node_list R_PAREN
    (3) node -> . node L_PAREN node_list EXCLUDE R_PAREN
    (4) node -> . node L_PAREN node_list R_PAREN EXCLUDE
    (7) node -> . node WAVE_DASH
    (10) node -> . node bullet_list
    (11) node -> . node L_PAREN bullet_list R_PAREN
    (16) node -> . node node
    (19) node -> . range_node
    (20) node -> . num_node
    (21) node -> . string_node
    (22) node -> . suffix_node
    (15) range_node -> . node WAVE_DASH node
    (14) num_node -> . num_node THEN num_node
    (17) num_node -> . num_node HYPHEN num_node
    (23) num_node -> . PREFIX NUMBER
    (24) num_node -> . PREFIX NUMBER SUFFIX
    (25) num_node -> . PREFIX NUMBER SUFFIX COMPARATIVE_SUFFIX
    (26) num_node -> . NUMBER SUFFIX
    (27) num_node -> . NUMBER SUFFIX COMPARATIVE_SUFFIX
    (28) num_node -> . NUMBER
    (29) num_node -> . NUMBER COMPARATIVE_SUFFIX
    (30) num_node -> . PREFIX NUMBER COMPARATIVE_SUFFIX
    (18) string_node -> . string_node HYPHEN num_node
    (31) string_node -> . ID NUMBER
    (32) string_node -> . ID NUMBER SUFFIX
    (33) string_node -> . ID
    (34) string_node -> . string_node DOT ID
    (35) string_node -> . FLOOR BULLET FLOOR
    (36) suffix_node -> . L_PAREN SUFFIX R_PAREN

  ! shift/reduce conflict for COMMA resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 6 (node_list -> node .)
  ! reduce/reduce conflict for R_PAREN resolved using rule 6 (node_list -> node .)
  ! reduce/reduce conflict for EXCLUDE resolved using rule 6 (node_list -> node .)
    COMMA           shift and go to state 15
    $end            reduce using rule 6 (node_list -> node .)
    R_PAREN         reduce using rule 6 (node_list -> node .)
    EXCLUDE         reduce using rule 6 (node_list -> node .)
    L_PAREN         shift and go to state 16
    WAVE_DASH       shift and go to state 17
    BULLET          shift and go to state 19
    PREFIX          shift and go to state 10
    NUMBER          shift and go to state 11
    ID              shift and go to state 12
    FLOOR           shift and go to state 13

  ! COMMA           [ reduce using rule 13 (bullet_list -> node .) ]
  ! $end            [ reduce using rule 13 (bullet_list -> node .) ]
  ! R_PAREN         [ reduce using rule 13 (bullet_list -> node .) ]
  ! EXCLUDE         [ reduce using rule 13 (bullet_list -> node .) ]

    node                           shift and go to state 14
    bullet_list                    shift and go to state 18
    range_node                     shift and go to state 6
    num_node                       shift and go to state 7
    string_node                    shift and go to state 8
    suffix_node                    shift and go to state 9

state 4

    (8) node_list -> bullet_list . COMMA node_list
    (9) node_list -> bullet_list .

    COMMA           shift and go to state 20
    $end            reduce using rule 9 (node_list -> bullet_list .)
    R_PAREN         reduce using rule 9 (node_list -> bullet_list .)
    EXCLUDE         reduce using rule 9 (node_list -> bullet_list .)


state 5

    (36) suffix_node -> L_PAREN . SUFFIX R_PAREN

    SUFFIX          shift and go to state 21


state 6

    (19) node -> range_node .

    COMMA           reduce using rule 19 (node -> range_node .)
    L_PAREN         reduce using rule 19 (node -> range_node .)
    WAVE_DASH       reduce using rule 19 (node -> range_node .)
    BULLET          reduce using rule 19 (node -> range_node .)
    PREFIX          reduce using rule 19 (node -> range_node .)
    NUMBER          reduce using rule 19 (node -> range_node .)
    ID              reduce using rule 19 (node -> range_node .)
    FLOOR           reduce using rule 19 (node -> range_node .)
    $end            reduce using rule 19 (node -> range_node .)
    R_PAREN         reduce using rule 19 (node -> range_node .)
    EXCLUDE         reduce using rule 19 (node -> range_node .)


state 7

    (20) node -> num_node .
    (14) num_node -> num_node . THEN num_node
    (17) num_node -> num_node . HYPHEN num_node

    COMMA           reduce using rule 20 (node -> num_node .)
    L_PAREN         reduce using rule 20 (node -> num_node .)
    WAVE_DASH       reduce using rule 20 (node -> num_node .)
    BULLET          reduce using rule 20 (node -> num_node .)
    PREFIX          reduce using rule 20 (node -> num_node .)
    NUMBER          reduce using rule 20 (node -> num_node .)
    ID              reduce using rule 20 (node -> num_node .)
    FLOOR           reduce using rule 20 (node -> num_node .)
    $end            reduce using rule 20 (node -> num_node .)
    R_PAREN         reduce using rule 20 (node -> num_node .)
    EXCLUDE         reduce using rule 20 (node -> num_node .)
    THEN            shift and go to state 22
    HYPHEN          shift and go to state 23


state 8

    (21) node -> string_node .
    (18) string_node -> string_node . HYPHEN num_node
    (34) string_node -> string_node . DOT ID

    COMMA           reduce using rule 21 (node -> string_node .)
    L_PAREN         reduce using rule 21 (node -> string_node .)
    WAVE_DASH       reduce using rule 21 (node -> string_node .)
    BULLET          reduce using rule 21 (node -> string_node .)
    PREFIX          reduce using rule 21 (node -> string_node .)
    NUMBER          reduce using rule 21 (node -> string_node .)
    ID              reduce using rule 21 (node -> string_node .)
    FLOOR           reduce using rule 21 (node -> string_node .)
    $end            reduce using rule 21 (node -> string_node .)
    R_PAREN         reduce using rule 21 (node -> string_node .)
    EXCLUDE         reduce using rule 21 (node -> string_node .)
    HYPHEN          shift and go to state 24
    DOT             shift and go to state 25


state 9

    (22) node -> suffix_node .

    COMMA           reduce using rule 22 (node -> suffix_node .)
    L_PAREN         reduce using rule 22 (node -> suffix_node .)
    WAVE_DASH       reduce using rule 22 (node -> suffix_node .)
    BULLET          reduce using rule 22 (node -> suffix_node .)
    PREFIX          reduce using rule 22 (node -> suffix_node .)
    NUMBER          reduce using rule 22 (node -> suffix_node .)
    ID              reduce using rule 22 (node -> suffix_node .)
    FLOOR           reduce using rule 22 (node -> suffix_node .)
    $end            reduce using rule 22 (node -> suffix_node .)
    R_PAREN         reduce using rule 22 (node -> suffix_node .)
    EXCLUDE         reduce using rule 22 (node -> suffix_node .)


state 10

    (23) num_node -> PREFIX . NUMBER
    (24) num_node -> PREFIX . NUMBER SUFFIX
    (25) num_node -> PREFIX . NUMBER SUFFIX COMPARATIVE_SUFFIX
    (30) num_node -> PREFIX . NUMBER COMPARATIVE_SUFFIX

    NUMBER          shift and go to state 26


state 11

    (26) num_node -> NUMBER . SUFFIX
    (27) num_node -> NUMBER . SUFFIX COMPARATIVE_SUFFIX
    (28) num_node -> NUMBER .
    (29) num_node -> NUMBER . COMPARATIVE_SUFFIX

    SUFFIX          shift and go to state 27
    THEN            reduce using rule 28 (num_node -> NUMBER .)
    HYPHEN          reduce using rule 28 (num_node -> NUMBER .)
    COMMA           reduce using rule 28 (num_node -> NUMBER .)
    L_PAREN         reduce using rule 28 (num_node -> NUMBER .)
    WAVE_DASH       reduce using rule 28 (num_node -> NUMBER .)
    BULLET          reduce using rule 28 (num_node -> NUMBER .)
    PREFIX          reduce using rule 28 (num_node -> NUMBER .)
    NUMBER          reduce using rule 28 (num_node -> NUMBER .)
    ID              reduce using rule 28 (num_node -> NUMBER .)
    FLOOR           reduce using rule 28 (num_node -> NUMBER .)
    $end            reduce using rule 28 (num_node -> NUMBER .)
    R_PAREN         reduce using rule 28 (num_node -> NUMBER .)
    EXCLUDE         reduce using rule 28 (num_node -> NUMBER .)
    DOT             reduce using rule 28 (num_node -> NUMBER .)
    COMPARATIVE_SUFFIX shift and go to state 28


state 12

    (31) string_node -> ID . NUMBER
    (32) string_node -> ID . NUMBER SUFFIX
    (33) string_node -> ID .

  ! shift/reduce conflict for NUMBER resolved as shift
    NUMBER          shift and go to state 29
    HYPHEN          reduce using rule 33 (string_node -> ID .)
    DOT             reduce using rule 33 (string_node -> ID .)
    COMMA           reduce using rule 33 (string_node -> ID .)
    L_PAREN         reduce using rule 33 (string_node -> ID .)
    WAVE_DASH       reduce using rule 33 (string_node -> ID .)
    BULLET          reduce using rule 33 (string_node -> ID .)
    PREFIX          reduce using rule 33 (string_node -> ID .)
    ID              reduce using rule 33 (string_node -> ID .)
    FLOOR           reduce using rule 33 (string_node -> ID .)
    $end            reduce using rule 33 (string_node -> ID .)
    R_PAREN         reduce using rule 33 (string_node -> ID .)
    EXCLUDE         reduce using rule 33 (string_node -> ID .)

  ! NUMBER          [ reduce using rule 33 (string_node -> ID .) ]


state 13

    (35) string_node -> FLOOR . BULLET FLOOR

    BULLET          shift and go to state 30


state 14

    (16) node -> node node .
    (12) bullet_list -> node . BULLET bullet_list
    (13) bullet_list -> node .
    (2) node -> node . L_PAREN node_list R_PAREN
    (3) node -> node . L_PAREN node_list EXCLUDE R_PAREN
    (4) node -> node . L_PAREN node_list R_PAREN EXCLUDE
    (7) node -> node . WAVE_DASH
    (10) node -> node . bullet_list
    (11) node -> node . L_PAREN bullet_list R_PAREN
    (16) node -> node . node
    (15) range_node -> node . WAVE_DASH node
    (12) bullet_list -> . node BULLET bullet_list
    (13) bullet_list -> . node
    (2) node -> . node L_PAREN node_list R_PAREN
    (3) node -> . node L_PAREN node_list EXCLUDE R_PAREN
    (4) node -> . node L_PAREN node_list R_PAREN EXCLUDE
    (7) node -> . node WAVE_DASH
    (10) node -> . node bullet_list
    (11) node -> . node L_PAREN bullet_list R_PAREN
    (16) node -> . node node
    (19) node -> . range_node
    (20) node -> . num_node
    (21) node -> . string_node
    (22) node -> . suffix_node
    (15) range_node -> . node WAVE_DASH node
    (14) num_node -> . num_node THEN num_node
    (17) num_node -> . num_node HYPHEN num_node
    (23) num_node -> . PREFIX NUMBER
    (24) num_node -> . PREFIX NUMBER SUFFIX
    (25) num_node -> . PREFIX NUMBER SUFFIX COMPARATIVE_SUFFIX
    (26) num_node -> . NUMBER SUFFIX
    (27) num_node -> . NUMBER SUFFIX COMPARATIVE_SUFFIX
    (28) num_node -> . NUMBER
    (29) num_node -> . NUMBER COMPARATIVE_SUFFIX
    (30) num_node -> . PREFIX NUMBER COMPARATIVE_SUFFIX
    (18) string_node -> . string_node HYPHEN num_node
    (31) string_node -> . ID NUMBER
    (32) string_node -> . ID NUMBER SUFFIX
    (33) string_node -> . ID
    (34) string_node -> . string_node DOT ID
    (35) string_node -> . FLOOR BULLET FLOOR
    (36) suffix_node -> . L_PAREN SUFFIX R_PAREN

  ! shift/reduce conflict for BULLET resolved as shift
  ! reduce/reduce conflict for COMMA resolved using rule 13 (bullet_list -> node .)
  ! reduce/reduce conflict for L_PAREN resolved using rule 13 (bullet_list -> node .)
  ! reduce/reduce conflict for WAVE_DASH resolved using rule 13 (bullet_list -> node .)
  ! shift/reduce conflict for BULLET resolved as shift
  ! reduce/reduce conflict for PREFIX resolved using rule 13 (bullet_list -> node .)
  ! reduce/reduce conflict for NUMBER resolved using rule 13 (bullet_list -> node .)
  ! reduce/reduce conflict for ID resolved using rule 13 (bullet_list -> node .)
  ! reduce/reduce conflict for FLOOR resolved using rule 13 (bullet_list -> node .)
  ! reduce/reduce conflict for $end resolved using rule 13 (bullet_list -> node .)
  ! reduce/reduce conflict for R_PAREN resolved using rule 13 (bullet_list -> node .)
  ! reduce/reduce conflict for EXCLUDE resolved using rule 13 (bullet_list -> node .)
  ! shift/reduce conflict for L_PAREN resolved as shift
  ! shift/reduce conflict for WAVE_DASH resolved as shift
  ! shift/reduce conflict for PREFIX resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for FLOOR resolved as shift
    BULLET          shift and go to state 19
    COMMA           reduce using rule 13 (bullet_list -> node .)
    $end            reduce using rule 13 (bullet_list -> node .)
    R_PAREN         reduce using rule 13 (bullet_list -> node .)
    EXCLUDE         reduce using rule 13 (bullet_list -> node .)
    L_PAREN         shift and go to state 16
    WAVE_DASH       shift and go to state 17
    PREFIX          shift and go to state 10
    NUMBER          shift and go to state 11
    ID              shift and go to state 12
    FLOOR           shift and go to state 13

  ! COMMA           [ reduce using rule 16 (node -> node node .) ]
  ! L_PAREN         [ reduce using rule 16 (node -> node node .) ]
  ! WAVE_DASH       [ reduce using rule 16 (node -> node node .) ]
  ! BULLET          [ reduce using rule 16 (node -> node node .) ]
  ! PREFIX          [ reduce using rule 16 (node -> node node .) ]
  ! NUMBER          [ reduce using rule 16 (node -> node node .) ]
  ! ID              [ reduce using rule 16 (node -> node node .) ]
  ! FLOOR           [ reduce using rule 16 (node -> node node .) ]
  ! $end            [ reduce using rule 16 (node -> node node .) ]
  ! R_PAREN         [ reduce using rule 16 (node -> node node .) ]
  ! EXCLUDE         [ reduce using rule 16 (node -> node node .) ]
  ! L_PAREN         [ reduce using rule 13 (bullet_list -> node .) ]
  ! WAVE_DASH       [ reduce using rule 13 (bullet_list -> node .) ]
  ! BULLET          [ reduce using rule 13 (bullet_list -> node .) ]
  ! PREFIX          [ reduce using rule 13 (bullet_list -> node .) ]
  ! NUMBER          [ reduce using rule 13 (bullet_list -> node .) ]
  ! ID              [ reduce using rule 13 (bullet_list -> node .) ]
  ! FLOOR           [ reduce using rule 13 (bullet_list -> node .) ]

    node                           shift and go to state 14
    bullet_list                    shift and go to state 18
    range_node                     shift and go to state 6
    num_node                       shift and go to state 7
    string_node                    shift and go to state 8
    suffix_node                    shift and go to state 9

state 15

    (5) node_list -> node COMMA . node_list
    (5) node_list -> . node COMMA node_list
    (6) node_list -> . node
    (8) node_list -> . bullet_list COMMA node_list
    (9) node_list -> . bullet_list
    (2) node -> . node L_PAREN node_list R_PAREN
    (3) node -> . node L_PAREN node_list EXCLUDE R_PAREN
    (4) node -> . node L_PAREN node_list R_PAREN EXCLUDE
    (7) node -> . node WAVE_DASH
    (10) node -> . node bullet_list
    (11) node -> . node L_PAREN bullet_list R_PAREN
    (16) node -> . node node
    (19) node -> . range_node
    (20) node -> . num_node
    (21) node -> . string_node
    (22) node -> . suffix_node
    (12) bullet_list -> . node BULLET bullet_list
    (13) bullet_list -> . node
    (15) range_node -> . node WAVE_DASH node
    (14) num_node -> . num_node THEN num_node
    (17) num_node -> . num_node HYPHEN num_node
    (23) num_node -> . PREFIX NUMBER
    (24) num_node -> . PREFIX NUMBER SUFFIX
    (25) num_node -> . PREFIX NUMBER SUFFIX COMPARATIVE_SUFFIX
    (26) num_node -> . NUMBER SUFFIX
    (27) num_node -> . NUMBER SUFFIX COMPARATIVE_SUFFIX
    (28) num_node -> . NUMBER
    (29) num_node -> . NUMBER COMPARATIVE_SUFFIX
    (30) num_node -> . PREFIX NUMBER COMPARATIVE_SUFFIX
    (18) string_node -> . string_node HYPHEN num_node
    (31) string_node -> . ID NUMBER
    (32) string_node -> . ID NUMBER SUFFIX
    (33) string_node -> . ID
    (34) string_node -> . string_node DOT ID
    (35) string_node -> . FLOOR BULLET FLOOR
    (36) suffix_node -> . L_PAREN SUFFIX R_PAREN

    PREFIX          shift and go to state 10
    NUMBER          shift and go to state 11
    ID              shift and go to state 12
    FLOOR           shift and go to state 13
    L_PAREN         shift and go to state 5

    node                           shift and go to state 3
    node_list                      shift and go to state 31
    bullet_list                    shift and go to state 4
    range_node                     shift and go to state 6
    num_node                       shift and go to state 7
    string_node                    shift and go to state 8
    suffix_node                    shift and go to state 9

state 16
